<resources>
    <string name="app_title">Final Project</string>

    <string name="login">Enter</string>
    <string name="dont_have_account">I don\'t have an account yet</string>

    <string name="sign_up">Sign Up</string>
    <string name="have_account">I already have an account</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="validate_pw_length">Password must be at least 6 characters long</string>
    <string name="validate_pw_empty">Please enter a password</string>
    <string name="validate_email_valid">Please enter a valid email</string>
    <string name="validate_email">Please enter an email</string>
    <string name="validate_user_exists">User already exists in the system</string>

    <!--  logout page  -->
    <string name="logout_title">Logout</string>
    <string name="logout_description">Are you sure you want to logout?</string>
    <string name="logout_confirm">Confirm</string>
    <string name="logout_cancel">Cancel</string>

    <string name="sign_up_error_create">Sign Up failed. Try again after some time.</string>
    <string name="login_error_create">Falha na autenticação. Verifique seus dados e tente novamente.</string>

    <!--  Main  -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_welcome">Welcome</string>
    <string name="description_welcome">Register your places to walk and always find something new!</string>

    <!--  Tab  -->
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_about">About</string>
    <string name="title_config">Configuration</string>
    <string name="title_exit">Exit</string>

    <!-- generics -->
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_cancel">Cancel</string>

    <!-- maps page -->
    <string name="txt_reset">Reset</string>
    <string name="txt_save_location">Save location!</string>

    <!-- about page -->
    <string name="about_version">Version</string>
    <string name="about_copyright">All rights reserverd © 2021</string>
    <string name="about_by">Developed by</string>

    <!-- config lang page -->
    <string name="config_lang_label">Language</string>
    <string name="config_lang_confirmation">Do you want to change the language to "%1$s"?</string>
    <string name="config_lang_current">Current</string>
  
    <!-- list places page -->
    <string name="place_name">Place Name</string>
    <string name="place_description">Place description</string>
    <string name="place_isVisited">Place visited</string>
    <string name="btn_add">Add Item</string>

    <!-- each place listed -->
    <string name="edit_button">Edit</string>
    <string name="share_button">Share</string>
    <string name="call_button">Call</string>
    <string name="delete_button">Delete</string>
    <string name="text_share">Share to:</string>

    <!-- exclusion modal -->
    <string name="title_exclusion">Place Deletion</string>
    <string name="description_exclusion">Do you want to delete this location?</string>
    <string name="confirm_exclusion">Delete</string>
    <string name="cancel_exclusion">Cancel</string>

    <!-- edit place page -->
    <string name="new_place_title">New Place</string>
    <string name="edit_place_title">Edit Place</string>
    <string name="forbidden_empty">Name field is empty.</string>
    <string name="item_image">Image</string>
    <string name="placeholder_place_name">Name</string>
    <string name="placeholder_place_address">Address</string>
    <string name="placeholder_place_description">Description</string>
    <string name="placeholder_place_phone">Phone</string>
    <string name="placeholder_place_visited">Is visited place?</string>
    <string name="edit_save_button">Save</string>


    <!--  PERMISSÕES  -->
    <string name="app_name">Permission</string>
    <string name="make_call">Make a Call</string>
    <string name="never_ask_again_dialog">Para que possamos fazer ligações através do app é preciso que acesse as configurações do sistema e conceda manual a permissão. Caso concorde, clique no botão de ir para as configurações.</string>
    <string name="go_to_settings">Ir para as configurações!</string>
    <string name="permission_dialog_title">Permissão</string>
    <string name="more_info_dialog">Para que possamos fazer ligações através do app é preciso que nos conceda permissão.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="permission_denied">Permissão foi recusada.</string>
</resources>